<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Meet Us</string>
    <string name="hello_world">Login</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">username</string>
    <string name="password">password</string>
    <string name="login">enter</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="profile">Edit Profile</string>
    <string name="refresh">Pull Down To Refresh</string>
    <string name="title_activity_main_screen">Mee2there</string>
    <string name="action_search">search</string>
    <string name="organize_activity">Organize an Activity</string>
    <string name="activity_name">Title</string>

    <string name="activity_detail">Details</string>
    <string name="activity_time">Time</string>

    <string name="dummy_section_text">Section %1d is just a dummy section.</string>
    <string name="demo_external_activity">Demo External Activity</string>
    <string name="demo_collection">Demo Collection</string>
    <string name="title_activity_event_detail">EventDetail</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_organize">Organize</string>

</resources>
