<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".FirstActivity"
    android:background="@drawable/app_background">
    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/hello_world"
        android:textAppearance="?android:attr/textAppearanceLarge"

        />

    <EditText android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/login_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:hint="@string/user_name"
        android:ems="20">
    <requestFocus />

    </EditText>

    <EditText android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/user_name"
        android:layout_below="@+id/user_name"
        android:layout_marginTop="38dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:ems="20"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/password"
        android:layout_below="@+id/password"
        android:layout_marginTop="38dp"
        android:text="@string/login"
        android:onClick="sendMessage"
        android:ems="15"/>

</RelativeLayout>
